Fixing spacing at bottom of homepage

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -49,7 +49,7 @@ body {
   }
   ul {
     width: 100%;
-    height: 430px;
+    height: 410px;
     overflow: hidden;
   }
 }
